--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,6 @@
 
     RewriteCond %{REQUEST_FILENAME} !-f
     # Change below before deploying to production
-    # RewriteRule ^(.*)$ /web/app.php [QSA,L]
-    RewriteRule ^(.*)$ /web/app_dev.php [QSA,L]
+    RewriteRule ^(.*)$ /web/app.php [QSA,L]
+    # RewriteRule ^(.*)$ /web/app_dev.php [QSA,L]
 </IfModule>
